syntax = "proto3";
package pb;

service AuthenticationService {
    rpc CreateCredentials (CreateCredentialsRequest) returns (CreateCredentialsResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message Credentials {
    string UserID = 1;
    string Username = 2;
    string Password = 3;
}

message CreateCredentialsRequest {
    Credentials Credentials = 1;
}

message CreateCredentialsResponse {
    string Error = 1;
}

message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message LoginResponse {
    string Error = 1;
    string Token = 2;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    string Error = 1;
    bool Valid = 2;
}
